// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`default renderer: task-enable should enable task with general context in subtasks: 2PeJ1GS5SrNdC7DXMv8nHAQNfire6UYB-exit 1`] = `[]`;

exports[`default renderer: task-enable should enable task with general context in subtasks: 2PeJ1GS5SrNdC7DXMv8nHAQNfire6UYB-stderr 1`] = `[]`;

exports[`default renderer: task-enable should enable task with general context in subtasks: 2PeJ1GS5SrNdC7DXMv8nHAQNfire6UYB-stdout 1`] = `
[
  "[?25l",
  "[?2026h◼ This task will execute.
[?2026l",
  "[?2026h[G[G◼ This task will show subtasks.[K
[?2026l",
  "[?2026h[2K[1A[2K[1A[2K[G❯ This task will execute.
◼ This task will show subtasks.
[?2026l",
  "[?2026h[2K[1A[2K[1A[2K[G✔ This task will execute.
◼ This task will show subtasks.
[?2026l",
  "[?2026h[1A[G[2K[G❯ This task will show subtasks.[K
[?2026l",
  "[?2026h[G[G  ◼ This task will execute.[K
[?2026l",
  "[?2026h[1A[G[2K[G  ❯ This task will execute.[K
[?2026l",
  "[?2026h[1A[G[2K[G  ✔ This task will execute.[K
[?2026l",
  "[?2026h[2A[G[2K[1B[2K[1A[G✔ This task will show subtasks.[K
[?2026l",
  "[?2026h[2K[1A[2K[1A[2K[G[?2026l",
  "✔ This task will execute.
✔ This task will show subtasks.
",
  "[?25h",
]
`;

exports[`default renderer: task-enable should enable task with general context: JeLYvYj1f4ddSjgwkUp7Nr8hICHLdEsU-exit 1`] = `[]`;

exports[`default renderer: task-enable should enable task with general context: JeLYvYj1f4ddSjgwkUp7Nr8hICHLdEsU-stderr 1`] = `[]`;

exports[`default renderer: task-enable should enable task with general context: JeLYvYj1f4ddSjgwkUp7Nr8hICHLdEsU-stdout 1`] = `
[
  "[?25l",
  "[?2026h◼ This task will execute.
[?2026l",
  "[?2026h[G[G◼ This task will never execute.[K
[?2026l",
  "[?2026h[2K[1A[2K[1A[2K[G❯ This task will execute.
◼ This task will never execute.
[?2026l",
  "[?2026h[2K[1A[2K[1A[2K[G✔ This task will execute.
◼ This task will never execute.
[?2026l",
  "[?2026h[1A[G[2K[G[?2026l",
  "[?2026h[2K[1A[2K[G[?2026l",
  "✔ This task will execute.
",
  "[?25h",
]
`;
